# z3-ocaml-sandbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  bindings-oneshot.c  bindings.c  dune-project  notes.md  z3_ocaml_sandbox.opam
junk/: fishhook.c  mimalloc-test-helper.cpp  mimalloc-test.cpp  tlp.c
junk/notes/: cxxabi-exports-cxxfilt.txt  cxxabi-exports-raw.txt  cxxabi-exports-table.txt  cxxabi-exports-table2.txt  cxxabi-syms.txt  libmalloc-exports-table.txt  libmalloc-exports.txt  libmalloc-hooked-raw.txt
lib/: dune  z3_ocaml_sandbox.ml  z3_ocaml_sandbox.mli
scripts/: filter-out-get-model-smt-files.py  tune_z3_params.py  z3-params2json.py  z3_params2json.py
scripts/codeql-custom-queries-z3-cpp/: find-symbol-str-lit-calls-params.ql  find-symbol-str-lit-calls.ql
smt2-samples/: sat-foo.smt2  sat-getmodel-simple.smt2  sat-getmodel.smt2  sat.smt2  unsat-foo.smt2  unsat-getmodel.smt2  z3-dump-0a525405413a89a4455c2829cb5b9f85328bb289638f394bdabf5d6a81339837.smt2  z3-dump-5c9dc7bc214ec4e7694f40e1262a7506469040250af3ef7cf6abd9bb2707a0f4.smt2
smt2-samples-small/: sat.smt2  unsat.smt2
tools/: CMakeLists.txt
tools/z3-bench/: CMakeLists.txt  alloc.h  clear-macros.h  disk-test.cpp  dyld-interposing.c  fbsv.cpp  fishhook.c  link-in-libmalloc.c  malloc-wrapped.c  malloc-wrapped.h  mimalloc-extern.c  mimalloc-fishhook.c  mimalloc-helper.cpp  mimalloc-tester-dylib-c.c  mimalloc-tester-exe.c  mimalloc-testing.cmake  mimalloc-types.h  mimalloc-umbrella.c  mimalloc-visibility.c  misc-decls.h  noalloc-stdio.c  noalloc-stdio.h  sexpr.cpp  sexpr.h  symbol-stubs.c  symbol-stubs.tbd  types-bare.h  z3-bench-exe.c  z3-bench.cmake  z3-bench.cpp  z3-test.cpp
z3-mini/: dune  hedley.h  z3-mini.c  z3-mini.h  z3-mini.ml
z3_mini/: dune  function_description.ml  type_description.ml  z3_mini.c  z3_mini.h  z3_mini.ml  z3_mini.mli  z3_mini.mli.orig  z3_mini_bindings.ml.orig  z3_mini_stub_generator.ml.orig
z3_mini/bindings/: dune  z3_mini_bindings.ml
z3_mini/stub-generator/: dune  z3_mini_stub_generator.ml
