(foreign_library
 (archive_name z3_mini)
 (language c)
 (names z3_mini)
 (flags :standard "-isystem" "/opt/homebrew/include"))

(library
 (name z3_mini)
 (libraries ctypes)
 (package z3_mini)
 (ctypes
  (external_library_name z3_mini_c)
  (build_flags_resolver
   (vendored
    (c_flags "-I" ".")))
  (headers
   (include "z3_mini.h" "/opt/homebrew/include/z3.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
