(foreign_library
 (archive_name z3_mini)
 (language c)
 (names z3_mini)
 (flags :standard "-isystem" "/opt/homebrew/include"))

(library
 (name z3_mini)
 (libraries ctypes)
 (package z3_mini)
 (ctypes
  (external_library_name libz3_mini)
  (build_flags_resolver
   (vendored
    (c_flags :standard "-I" ".")
    (c_library_flags
     :standard
     "-L"
     "./z3_mini"
     "-L"
     "/opt/homebrew/opt/z3/lib"
     -lz3_mini
     -lz3)))
  (headers
   (include "z3_mini.h" "/opt/homebrew/include/z3.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (errno_policy ignore_errno)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
